--- a/AplicacionDeGestion/vistas/ModificarUsuarioUserControl.xaml
+++ b/AplicacionDeGestion/vistas/ModificarUsuarioUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="AplicacionDeGestion.vistas.CrearUsuarioUserControl"
+﻿<UserControl x:Class="AplicacionDeGestion.vistas.ModificarUsuarioUserControl"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
