--- a/AplicacionDeGestion/vistas/Window1.xaml
+++ b/AplicacionDeGestion/vistas/Window1.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="AplicacionDeGestion.vistas.CrearUsuarioUserControl"
+﻿<Window x:Class="AplicacionDeGestion.vistas.Window1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="Window1" Height="450" Width="800">
     <Grid>
-
+        
     </Grid>
 </Window>
