--- a/AplicacionDeGestion/vistas/CrearModificarUsuarioFormulario.xaml
+++ b/AplicacionDeGestion/vistas/CrearModificarUsuarioFormulario.xaml
@@ -7,18 +7,7 @@
         xmlns:inputLayout="clr-namespace:Syncfusion.UI.Xaml.TextInputLayout;assembly=Syncfusion.SfTextInputLayout.WPF"
         xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
         mc:Ignorable="d"
-        Title="Window1" Height="480" Width="600">
-    <Window.Resources>
-        <Style TargetType="TextBlock">
-            <Setter Property="Margin" Value="30,10,30,0"></Setter>
-        </Style>
-        <Style TargetType="Button">
-            <Setter Property="HorizontalAlignment" Value="Left"></Setter>
-            <Setter Property="Margin" Value="30,10,30,10"></Setter>
-            <Setter Property="Width" Value="100"></Setter>
-            <Setter Property="Height" Value="20"></Setter>
-        </Style>
-    </Window.Resources>
+        Title="Window1" Height="450" Width="600">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -40,8 +29,7 @@
                                        HintFloatMode="Float">
                 <TextBox Text="{Binding Path=UsuarioFormulario.Documento}"></TextBox>
             </inputLayout:SfTextInputLayout>
-            <syncfusion:ButtonAdv SizeMode="Normal" Label="Examinar" SmallIcon ="/assets/Icons/folder.png"/>
-            <inputLayout:SfTextInputLayout Margin="15,25" Hint="Genero"                                      
+            <inputLayout:SfTextInputLayout Margin="15,0" Hint="Genero"                                      
                                        HintFloatMode="Float">
                 <TextBox Text="{Binding Path=UsuarioFormulario.Genero}"></TextBox>
             </inputLayout:SfTextInputLayout>
@@ -49,6 +37,7 @@
                                        HintFloatMode="Float">
                 <TextBox Text="{Binding Path=UsuarioFormulario.Telefono}"></TextBox>
             </inputLayout:SfTextInputLayout>
+            <syncfusion:ButtonAdv HorizontalAlignment="Left" Width="120" Margin="15,0" SizeMode="Normal" Label="Examinar" SmallIcon ="/assets/Icons/folder.png"/>
         </StackPanel>
     </Grid>
 </Window>
