Servicio Face "hecho", métodos subida imagen a contenedor azure, dialogos, vinculación VM con vistas, variables configuración con datos de Servicio Face.

--- a/AplicacionDeGestion/MainWindow.xaml
+++ b/AplicacionDeGestion/MainWindow.xaml
@@ -29,9 +29,7 @@
         </syncfusion:NavigationItem>
         
         <syncfusion:SfNavigationDrawer.ContentView>
-                <ContentControl Content="{Binding Path=UserControlActual}">
-                    
-                </ContentControl>
+                <ContentControl Content="{Binding Path=UserControlActual}"></ContentControl>
         </syncfusion:SfNavigationDrawer.ContentView>
     </syncfusion:SfNavigationDrawer>
        
