--- a/AplicacionDeGestion/vistas/AñadirMarcaDialogo.xaml
+++ b/AplicacionDeGestion/vistas/AñadirMarcaDialogo.xaml
@@ -4,8 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AplicacionDeGestion.vistas"
+        xmlns:inputLayout="clr-namespace:Syncfusion.UI.Xaml.TextInputLayout;assembly=Syncfusion.SfTextInputLayout.WPF"
+        xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
         mc:Ignorable="d"
-        Title="Añadir marca de vehículo" Icon="../assets/Icons/iconoAñadir.ico" Height="120" Width="300" ShowInTaskbar="False" ResizeMode="NoResize">
+        Title="Añadir marca de vehículo" Icon="../assets/Icons/iconoAñadir.ico" Height="140" Width="300" ShowInTaskbar="False" ResizeMode="NoResize">
     <Window.Resources>
         <Style TargetType="{x:Type Button}">
             <Setter Property="Width" Value="80"></Setter>
@@ -14,10 +16,14 @@
     </Window.Resources>
 
     <StackPanel Margin="10">
-        <TextBlock>Añadir marca</TextBlock>
-        <TextBox Text="{Binding MarcaNueva}"></TextBox>
+        <inputLayout:SfTextInputLayout Hint="Añadir marca"                                      
+                                       HintFloatMode="Float">
+            <TextBox Text="{Binding MarcaNueva}"></TextBox>
+        </inputLayout:SfTextInputLayout>
+
         <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-            <Button x:Name="AceptarButton" Command="{Binding AceptarCommand}" Click="AceptarButton_Click" IsDefault="True">Aceptar</Button>
+            <Button x:Name="AceptarButton" Command="{Binding AceptarCommand}" Click="AceptarButton_Click" IsDefault="True" RenderTransformOrigin="0.5,0.5">Aceptar
+            </Button>
             <Button IsCancel="True">Cancelar</Button>
         </StackPanel>
     </StackPanel>
